add section first + css

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div class="wrapper">
-		Hello
+		//= template/_first.html
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
