--- a/index.html
+++ b/index.html
@@ -5,13 +5,78 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" type="image/svg+xml" href="files/img/favicon/favicon.svg">
 	<link rel="stylesheet" href="files/index.min.css">
 	<title>Chocco</title>
 </head>
 
 <body>
 	<div class="wrapper">
-		Hello
+		<section class="first">
+		  <div class="first__container container">
+		    <header class="header">
+		      <a href="index.html" class="logo">chocco</a>
+		    
+		      <nav class="nav">
+		        <ul class="nav__list">
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">О нас</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Батончики</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Команда</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Меню</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Отзывы</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Как мы работаем</a>
+		          </li>
+		          <li class="nav__item">
+		            <a href="#" class="nav__link">Контакты</a>
+		          </li>
+		        </ul>
+		      </nav>
+		    
+		      <a href="tel:+78009039090" class="phone">8 800 903 90 90</a>
+		    </header>
+		
+		    <div class="first__content">
+		      <h1 class="first__head">натуральные шоколадные батончики</h1>
+		
+		      <div class="first__subs">
+		        <p>
+		          Наши батончики идеально подходят для
+		          тех, кто следит за своим здоровьем
+		        </p>
+		      </div>
+		
+		      <a href="#" class="button button--white">Заказать</a>
+		    </div><!-- .first__content -->
+		
+		    <ul class="feature">
+		      <li class="feature__item">
+		        <div class="feature__img feature__img--5"></div>
+		        <div class="feature__text">100% натуральный продукт</div>
+		      </li>
+		
+		      <li class="feature__item">
+		        <div class="feature__img feature__img--6"></div>
+		        <div class="feature__text">3-5 дней доставка по РФ</div>
+		      </li>
+		
+		      <li class="feature__item">
+		        <div class="feature__img feature__img--4"></div>
+		        <div class="feature__text">Не портит фигуру</div>
+		      </li>
+		    </ul>
+		  </div><!-- .container -->
+		</section>
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
