add section about + css

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 <body>
 	<div class="wrapper">
 		//= template/_first.html
+
+		//= template/_about.html
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
