--- a/index.html
+++ b/index.html
@@ -61,18 +61,77 @@
 		
 		    <ul class="feature">
 		      <li class="feature__item">
-		        <div class="feature__img feature__img--5"></div>
+		        <div class="feature__img feature__img--leaves"></div>
 		        <div class="feature__text">100% натуральный продукт</div>
 		      </li>
 		
 		      <li class="feature__item">
-		        <div class="feature__img feature__img--6"></div>
+		        <div class="feature__img feature__img--car"></div>
 		        <div class="feature__text">3-5 дней доставка по РФ</div>
 		      </li>
 		
 		      <li class="feature__item">
-		        <div class="feature__img feature__img--4"></div>
+		        <div class="feature__img feature__img--ruler"></div>
 		        <div class="feature__text">Не портит фигуру</div>
+		      </li>
+		    </ul>
+		  </div><!-- .container -->
+		</section>
+
+		<section class="about">
+		  <div class="about__container container">
+		    <div class="about__header">
+		      <h2 class="section-title">почему chocco?</h2>
+		
+		      <div class="about__subscribe">
+		        <p>
+		          В нашем мире все происходит очень быстро, поэтому мы
+		          делаем батончики, которые удобно взять с собой.
+		        </p>
+		      </div>
+		    </div><!-- .about__header -->
+		
+		    <ul class="about__list">
+		      <li class="about__item">
+		        <div class="about__img">
+		          <div class="about__svg about__svg--person"></div>
+		        </div>
+		        <h3 class="about__title">Полезно</h3>
+		        <div class="about__text">
+		          <p>
+		            Натуральность - ключевое качество
+		            нашей продукции. Мы используем
+		            только природные ингредиенты.
+		          </p>
+		        </div>
+		      </li>
+		
+		      <li class="about__item">
+		        <div class="about__img">
+		          <div class="about__svg about__svg--smile"></div>
+		        </div>
+		        <h3 class="about__title">Вкусно</h3>
+		        <div class="about__text">
+		          <p>
+		            Нежный, ненавязчивый, изысканный –
+		            так клиенты описывают вкусовые
+		            качества наших батончиков.
+		          </p>
+		        </div>
+		      </li>
+		
+		      <li class="about__item">
+		        <div class="about__img">
+		          <div class="about__svg about__svg--muscle"></div>
+		        </div>
+		        <h3 class="about__title">Питательно</h3>
+		        <div class="about__text">
+		          <p>
+		            Высокое содержание качественного
+		            белка, а также всех необходимых
+		            витаминов и минералов.
+		          </p>
+		        </div>
 		      </li>
 		    </ul>
 		  </div><!-- .container -->
