add section bars + css

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
 		//= template/_first.html
 
 		//= template/_about.html
+
+		//= template/_bars.html
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
