--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		      <nav class="nav">
 		        <ul class="nav__list">
 		          <li class="nav__item">
-		            <a href="#" class="nav__link">О нас</a>
+		            <a href="#about" class="nav__link">О нас</a>
 		          </li>
 		          <li class="nav__item">
-		            <a href="#" class="nav__link">Батончики</a>
+		            <a href="#bars" class="nav__link">Батончики</a>
 		          </li>
 		          <li class="nav__item">
 		            <a href="#" class="nav__link">Команда</a>
@@ -78,7 +78,7 @@
 		  </div><!-- .container -->
 		</section>
 
-		<section class="about">
+		<section class="about" id="about">
 		  <div class="about__container container">
 		    <div class="about__header">
 		      <h2 class="section-title">почему chocco?</h2>
@@ -136,6 +136,102 @@
 		    </ul>
 		  </div><!-- .container -->
 		</section>
+
+		<div class="bars" id="bars">
+		  <div class="bars__container container">
+		    <div class="slider">
+		      <div class="slider__control">
+		        <a href="#" class="slider__arrow slider__arrow--left"></a>
+		        <a href="#" class="slider__arrow slider__arrow--right"></a>
+		      </div><!-- .slider__control -->
+		
+		      <ul class="slider__list">
+		        <li class="slider__item">
+		          <div class="slider__pictures">
+		            <div class="slider__img">
+		              <img src="files/img/slider/product1.png" alt="product1">
+		            </div>
+		          </div>
+		
+		          <div class="slider__content">
+		            <div class="composition">
+		              <span class="composition__text">Состав</span>
+		              <ul class="composition__list">
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--oat"></span>
+		                  <span class="composition__title">Овёс</span>
+		                  <span class="composition__weight">25</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--seaweed"></span>
+		                  <span class="composition__title">Мор. водоросли</span>
+		                  <span class="composition__weight">15</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--almond"></span>
+		                  <span class="composition__title">Миндаль</span>
+		                  <span class="composition__weight">20</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--washing-powder"></span>
+		                  <span class="composition__title">Сухое молоко</span>
+		                  <span class="composition__weight">10</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--seeds"></span>
+		                  <span class="composition__title">Тыкв. семечки</span>
+		                  <span class="composition__weight">20</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--apitherapy"></span>
+		                  <span class="composition__title">Зам. сахара</span>
+		                  <span class="composition__weight">4</span>
+		                </li>
+		
+		                <li class="composition__item">
+		                  <span class="composition__img composition__img--beans"></span>
+		                  <span class="composition__title">Какао бобы</span>
+		                  <span class="composition__weight">4</span>
+		                </li>
+		              </ul>
+		            </div><!-- .composition -->
+		
+		            <h2 class="slider__title">Батончик “Морские водоросли”</h2>
+		
+		            <div class="slider__subscribe">
+		              <p>
+		                Гранола из морских водорослей с овсом, миндалем и тыквенными семечками. В состав также входят: сухое
+		                молоко, заменитель сахара и какао бобы.
+		              </p>
+		            </div>
+		
+		            <div class="slider__params">
+		              <div class="slider__kkal">
+		                <span class="slider__kkal-text">Калорийность</span>
+		                <span class="slider__kkal-number">120</span>
+		              </div>
+		
+		              <div class="slider__weight">
+		                <span class="slider__weight-text">Вес</span>
+		                <span class="slider__weight-number">98</span>
+		              </div>
+		            </div><!-- .slider__params -->
+		
+		            <div class="slider__footer">
+		              <span class="slider__price">140</span>
+		              <a href="#" class="button">Заказать</a>
+		            </div>
+		          </div><!-- .slider__content -->
+		        </li>
+		      </ul>
+		    </div><!-- .slider -->
+		  </div><!-- .container -->
+		</div>
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
