add section team + css

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
 		//= template/_about.html
 
 		//= template/_bars.html
+
+		//= template/_team.html
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
