--- a/index.html
+++ b/index.html
@@ -232,6 +232,82 @@
 		    </div><!-- .slider -->
 		  </div><!-- .container -->
 		</div>
+
+		<section class="team" id="team">
+		  <div class="team__container container">
+		    <h2 class="section-title">Команда</h2>
+		
+		    <ul class="team__list">
+		      <li class="team__item">
+		        <div class="team__img" style="background-image:url(files/img/team/photo-1542211295-d5bf730e56cd4.jpg);"></div>
+		        <div class="team__block">
+		          <a href="#" class="team__title">Борис Федорович</a>
+		
+		          <div class="team__subs">
+		            <div class="team__head">Оператор</div>
+		
+		            <div class="team__text">
+		              <p>
+		                С радостью поможет подобрать батончики и оформить заказ.
+		              </p>
+		            </div>
+		          </div><!-- .team__subs -->
+		        </div><!-- .team__block -->
+		      </li>
+		
+		      <li class="team__item">
+		        <div class="team__img" style="background-image:url(files/img/team/photo-1548534984-ddf53b264a58.jpg);"></div>
+		        <div class="team__block">
+		          <a href="#" class="team__title">Алла Иванова</a>
+		
+		          <div class="team__subs">
+		            <div class="team__head">Оператор</div>
+		
+		            <div class="team__text">
+		              <p>
+		                С радостью поможет подобрать батончики и оформить заказ.
+		              </p>
+		            </div>
+		          </div><!-- .team__subs -->
+		        </div><!-- .team__block -->
+		      </li>
+		
+		      <li class="team__item">
+		        <div class="team__img" style="background-image:url(files/img/team/photo-1551153771-1a67a570d583.jpg);"></div>
+		        <div class="team__block">
+		          <a href="#" class="team__title">Кирилл Матросов</a>
+		
+		          <div class="team__subs">
+		            <div class="team__head">Оператор</div>
+		
+		            <div class="team__text">
+		              <p>
+		                С радостью поможет подобрать батончики и оформить заказ.
+		              </p>
+		            </div>
+		          </div><!-- .team__subs -->
+		        </div><!-- .team__block -->
+		      </li>
+		
+		      <li class="team__item">
+		        <div class="team__img" style="background-image:url(files/img/team/photo-1549351512-c5e12b11e283.jpg);"></div>
+		        <div class="team__block">
+		          <a href="#" class="team__title">Мила Рыжкова</a>
+		
+		          <div class="team__subs">
+		            <div class="team__head">Оператор</div>
+		
+		            <div class="team__text">
+		              <p>
+		                С радостью поможет подобрать батончики и оформить заказ.
+		              </p>
+		            </div>
+		          </div><!-- .team__subs -->
+		        </div><!-- .team__block -->
+		      </li>
+		    </ul>
+		  </div><!-- .container -->
+		</section>
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
