add section menu + css

--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,17 @@
 
 <body>
 	<div class="wrapper">
-		//= template/_first.html
+		<div class="main-content">
+			//= template/_first.html
 
-		//= template/_about.html
+			//= template/_about.html
 
-		//= template/_bars.html
+			//= template/_bars.html
 
-		//= template/_team.html
+			//= template/_team.html
+
+			//= template/_menu.html
+		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
 </body>
