add section reviews + css

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
 			//= template/_team.html
 
 			//= template/_menu.html
+
+			//= template/_reviews.html
 		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
