add section works (video) + css

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
 			//= template/_menu.html
 
 			//= template/_reviews.html
+
+			//= template/_works.html
 		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
 	<script src="files/index.min.js"></script>
