--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/svg+xml" href="files/img/favicon/favicon.svg">
-	<link rel="stylesheet" href="files/index.min.css">
+	<link rel="stylesheet" href="files/main.min.css">
 	<title>Chocco</title>
 </head>
 
@@ -26,9 +26,11 @@
 			//= template/_reviews.html
 
 			//= template/_works.html
+
+			//= template/_delivery.html
 		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
-	<script src="files/index.min.js"></script>
+	<script src="files/main.min.js"></script>
 </body>
 
 </html>
