add section contacts + css

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
 			//= template/_works.html
 
 			//= template/_delivery.html
+
+			//= template/_contacts.html
 		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
 	<script src="files/main.min.js"></script>
