--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/svg+xml" href="files/img/favicon/favicon.svg">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+		integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="files/main.min.css">
 	<title>Chocco</title>
 </head>
 
 <body>
 	<div class="wrapper">
+
+		<ul class="navpage">
+			<li class="navpage__item is-active">
+				<a href="#" class="navpage__point" data-scroll-to="0"></a>
+			</li>
+		</ul><!-- .navpage -->
+
+		//= template/_navmobile.html
+
 		<div class="main-content">
 			//= template/_first.html
 
@@ -32,6 +43,8 @@
 			//= template/_contacts.html
 		</div><!-- .main-content -->
 	</div><!-- .wrapper -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"
+		integrity="sha256-vrn14y7WH7zgEElyQqm2uCGSQrX/xjYDjniRUQx3NyU=" crossorigin="anonymous"></script>
 	<script src="files/main.min.js"></script>
 </body>
 
